client/src/components/auctions/details.module.css
.auctionDetails {
  font-family: 'Arial', sans-serif;
  background-color: #f5f5f5;
  padding: 40px 20px;
  margin: 30px auto 0 auto;
  max-width: 1400px;
}

.auctionDetailsTitle {
  text-align: center;
  font-size: 3rem;
  color: #6A4E23;
  margin-bottom: 0.25em;
  margin-top: 1.5em;
}

.info-section {
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.auctionHeader {
  display: flex;
  align-items: start;
  text-align: center;
  margin-bottom: 20px;
  margin-top: 2em;
  justify-content: space-around;
}

.auctionImg {
  width: 800px;
  height: 600px;
  object-fit: contain;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  margin-left: 15px;
  margin-right: 22px;
  border-radius: 5%;
  display: block;
  background-color: #f0f0f0;
  box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);
}

.auctionHeader h1 {
  font-size: 2.5rem;
  color: #2a2a2a;
  white-space: normal;
  word-wrap: break-word;
}

.auctionText {
  display: flex;
  flex-direction: column;
  gap: 3em;
  width: 30em;
}


.auctionBidInfo {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.auctionBidInfo input {
  padding: 0.5em 1em;
  border-radius: 0.5em;
}

.levels,
.type {
  color: #888;
  font-size: 1.5rem;
  margin: 0;
}

.text {
  font-size: 1.2rem;
  color: #555;
  line-height: 1.6;
  text-align: justify;
  margin-bottom: 30px;
  margin-left: 2em;
}

.descriptionTitle {
  margin-left: 2em;
  margin-top: 2em;
}

.details-comments {
  width: 100%;
}

.details-comments h2 {
  font-size: 1.5rem;
  color: #444;
  margin-bottom: 10px;
}

.comment {
  background-color: #eba946;
  border-radius: 30px 0 30px 0;
  padding: 1px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
  margin: 1em auto;
  position: relative;
  overflow: visible;
}

.commentsTitle {
  margin-left: 1.5em;
}

.comment label {
  color: white;
  font-size: 1.2em;
}

.commentTextWrapper {
  display: flex;
  flex-direction: column;
  padding: 1em 0 0 1em;
  gap: 0.5em;
}

.commentText {
  font-size: 1.2em;
  color: white;
  margin: 0;
  max-width: 110ch;
}

.no-comment {
  font-size: 1rem;
  color: #888;
}

.commentsUl {
  list-style: none;
  overflow: visible;
  position: relative;
}

.addNewCommentTitle {
  margin-left: 1.5em;
}

.buttons {
  display: flex;
  gap: 15px;
  justify-content: center;
  margin-top: 20px;
}

.button {
  padding: 10px 20px;
  background-color: #e98f08;
  ;
  color: white;
  text-decoration: none;
  border-radius: 5px;
  font-size: 1rem;
  transition: background-color 0.3s ease;
}

.button:hover {
  background-color: #d47f00;
}

.delete-button {
  background-color: #FF4747;
}

.delete-button:hover {
  background-color: #e03e3e;
}

.create-comment {
  background-color: #fff;
  border-radius: 8px;
  padding: 20px;
  margin-top: 40px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

.create-comment label {
  font-size: 1.2rem;
  color: #444;
  margin-bottom: 10px;
}

.create-comment .form {
  display: flex;
  flex-direction: column;
}

.detailsTextarea {
  width: calc(100% - 1.5em);
  height: 100px;
  font-size: 1rem;
  color: #333;
  border-radius: 8px;
  border: 1px solid #ccc;
  resize: none;
  margin-left: 1.5em;
  margin-top: 1em;
}

.detailsTextarea:focus {
  outline: none;
  border-color: #d18f00;
}

.submit {
  align-self: flex-end;
  padding: 10px 20px;
  background-color: #e98f08;
  color: white;
  font-size: 1rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-left: 1.5em;
  margin-top: 1em;
}

.submit:hover {
  background-color: #d47f00;
  ;
}

.bid {
  align-self: flex-end;
  padding: 8px 16px;
  background-color: #e98f08;
  color: white;
  font-size: 1rem;
  border: none;
  border-radius: 0.5em;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-left: 10px;
}

.bid:hover {
  background-color: #d47f00;
}

.buttonClose {
  padding: 10px 20px;
  background-color: #e98f08;
  ;
  color: white;
  text-decoration: none;
  border-radius: 5px;
  font-size: 1rem;
  transition: background-color 0.3s ease;
}

.buttonClose:hover {
  background-color: #d47f00;
}

.noteWinner {
  text-align: center;
  font-size: 1.2em;
}

.authError {
  color: red;
  font-size: 1em;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.authErrorBid {
  color: red;
  font-size: 1em;
  text-align: center;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin-top: 1em;
}

.noComment {
  margin-left: 1.5em;
  margin-bottom: 2em;
  margin-top: 4em;
  text-align: center;
}

.commentDate {
  font-size: 0.75em;
  color: #555;
  position: absolute;
  bottom: 0;
  right: 0;
  margin-right: 1em;
  margin-bottom: 1em;
}

.commentTextOwner {
  color: #6A4E23;
  font-size: 1.1em;
  width: fit-content;
}

.commentTextOwner:hover {
  cursor: pointer;
  text-decoration: underline;
}

.editAndDeleteButtonsWrapper {
  position: absolute;
  top: 0;
  right: 0;
  margin-right: 0.5em;
  margin-top: 0.5em;
  display: flex;
  gap: 0.5em;
}

.editAndDeleteButtons {
  background-color: transparent;
  border-radius: 10px;
  border-color: white;
  color: white;
  transition: all 0.3s ease-in-out;
  border: 2px solid white;
}

.editAndDeleteButtons:hover {
  cursor: pointer;
  background-color: #d47f00;
  transform: scale(1.1);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.loadMoreComments {
  position: absolute;
  bottom: 0;
  right: 0;
  color: rgb(255, 166, 0);
  font-size: 1.2em;
  cursor: pointer;
}

.loadMoreComments:hover {
  text-decoration: underline;
  color: rgb(218, 141, 0);
}

.loadMoreCommentsWrapper {
  margin-top: 4em;
  position: relative;
}

@keyframes popEffect {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.025);
  }

  100% {
    transform: scale(1);
  }
}

@keyframes borderAnimation {
  0% {
    border-color: transparent;
    box-shadow: 0 0 0 0 rgba(52, 152, 219, 0.6);
  }

  50% {
    border-color: #3498db;
    box-shadow: 0 0 8px 4px rgba(52, 152, 219, 0.6);
  }

  100% {
    border-color: #3498db;
    box-shadow: 0 0 0 0 rgba(52, 152, 219, 0.6);
  }
}

.highlight {
  animation: popEffect 1s ease-out, borderAnimation 1s ease-out;
  border: solid 1px transparent;
}

.likeButton {
  font-size: 18px;
  color: #1DA7FC;
  background: none;
  border: none;
  cursor: pointer;
}

.likeButton:hover {
  transform: scale(1.2);
}

.likeButtonFalse {
  font-size: 18px;
  color: white;
  background: none;
  border: none;
  cursor: pointer;
}

.likeButtonFalse:hover {
  transform: scale(1.2);
}

.likesContainer {
  display: flex;
  align-items: center;
  gap: 0.5em;
  padding-left: 0.5em;
  position: relative;
  width: fit-content;
}

.likesText {
  color: #555;
  font-size: 0.8em;
  margin: 0;
}

.likesNumber {
  color: #1DA7FC;
  font-size: 1.1em;
  font-weight: bold;
}

.likesDropdown {
  position: absolute;
  top: 90%;
  left: 0;
  background: #f9f9f9;
  border: 1px solid #ccc;
  padding: 10px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  z-index: 9999;
  max-width: 30ch;
  overflow: hidden;
}

.likesEmail {
  color: #444444;
  margin: 0.5em 0;
  font-size: 0.8em;
  cursor: pointer;
}

.likesEmail:hover {
  text-decoration: underline;
}

.likesNumberWrapper {
  padding: 0.5em 0;
  display: flex;
  align-items: center;
  gap: 0.5em;
  cursor: default;
}

.likeButtonPreview {
  font-size: 18px;
  color: #1DA7FC;
  background: none;
  border: none;
}

.auctionOwnerEmailWrapper {
  display: flex;
  gap: 1em;
  align-items: center;
}

.auctionOwnerEmailWrapper h3,
p {
  margin: 0;
}

.auctionOwnerEmail {
  cursor: pointer;
  color: #555;
  font-size: 1.25em;
}

.auctionOwnerEmail:hover {
  text-decoration: underline;
}

.editButtons {
  position: absolute;
  top: 0;
  right: 0;
  margin-right: 0.5em;
  margin-top: 0.5em;
  display: flex;
  gap: 0.5em;
}

.saveAndCancelComment {
  background-color: transparent;
  border-radius: 10px;
  border-color: white;
  color: white;
  transition: all 0.3s ease-in-out;
  border: 2px solid white;
}

.saveAndCancelComment:hover {
  cursor: pointer;
  background-color: #d47f00;
  transform: scale(1.1);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.editCommentInput {
  width: calc(100% - 10em);
  min-height: 40px;
  max-height: 160px;
  resize: vertical;
  padding: 8px;
  font-size: 16px;
  font-family: inherit;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #f9f9f9;
  outline: none;
  transition: border-color 0.3s ease-in-out;
}

.editCommentInput:focus {
  border-color: #007bff;
  background-color: #fff;
}

.editCommentError {
  color: #8B0000;
  font-size: 1em;
  font-weight: bold;
  white-space: nowrap;
}

.likesContainerAndErrorWrapper {
  display: flex;
  align-items: center;
  gap: 1em;
  justify-content: space-between;
  width: 100%;
}

.editCommentErrorWrapper {
  flex: 1;
  text-align: center;
}

.submitAndErrorWrapper {
  display: flex;
  align-items: center;
  gap: 1em;
  justify-content: space-between;
  position: relative;
}

.ownerEmailTimestampWrapper {
  display: flex;
  flex-direction: column;
  margin-left: 2em;
  gap: 0.5em;
  margin-top: 4em;
}

.auctionOwnerDate {
  color: #555;
  font-size: 0.8em;
}

.auctionOwnerDateTitle {
  font-size: 0.8em;
}

.imageThumbnails {
  display: flex;
  gap: 10px;
  margin-bottom: 15px;
  margin-left: 2em;
}

.thumbnail {
  width: 60px;
  height: 60px;
  object-fit: cover;
  border-radius: 5px;
  cursor: pointer;
  transition: transform 0.2s;
  border: 2px solid transparent;
}

.thumbnail:hover {
  transform: scale(1.1);
}

.thumbnail:active {
  border-color: #d47f00;
}

.selectedThumbnail {
  width: 60px;
  height: 60px;
  object-fit: cover;
  border-radius: 5px;
  cursor: pointer;
  transition: transform 0.2s;
  border: 2px solid #d47f00;
}

.selectedThumbnail:hover {
  transform: scale(1.1);
}

.selectedThumbnail:active {
  border-color: #d47f00;
}

.navButton {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: white;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  width: 35px;
  height: 35px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background 0.3s;
  z-index: 10;
}

.navButton:disabled {
  opacity: 0.5;
}

.imageContainer {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 800px;
  overflow: hidden;
}

.navButton:first-of-type {
  left: 10px;
}

.navButton:last-of-type {
  right: 16px;
}

.imageWrapper {
  display: flex;
  transition: transform 0.5s ease-in-out;
}

